--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="./img/fav-ico/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./img/fav-ico/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./img/fav-ico/favicon-16x16.png">
+  <link rel="manifest" href="./img/fav-ico/site.webmanifest">
+  <link rel="mask-icon" href="./img/fav-ico/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="./img/fav-ico/favicon.ico">
+  <meta name="msapplication-TileColor" content="#603cba">
+  <meta name="msapplication-config" content="./img/fav-ico/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
+
   <link rel="shortcut icon" href="./img/Logo.svg" type="image/x-icon">
   <link rel="stylesheet" href="./css/reser.css">
   <link rel="stylesheet" href="./min-css/style.min.css">
